[tool.poetry]
name = "rl-practice"
version = "0.1.0"
description = ""
authors = ["agatan <agatan039@gmail.come"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.17.2"
torch = "^1.5.1"
tensorflow = "^1"
stable-baselines = {extras = ["mpi"], version = "^2.10.0"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
black = "^19.10b0"
mypy = "^0.781"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
